update the program

--- a/3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/CMakeLists.txt
+++ b/3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/CMakeLists.txt
@@ -4,11 +4,10 @@ project(Leizhuo_UnderWaterHexapodRobot)
 
 find_package(catkin REQUIRED)
 
-catkin_package()
-
 find_package(roslaunch)
 
 find_package(catkin REQUIRED COMPONENTS
+  message_generation
   controller_manager
   gazebo_ros
   gazebo_ros_control
@@ -24,6 +23,25 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   trac_ik_lib
   serial
+
+)
+
+add_message_files(
+  FILES
+  joint.msg
+)
+
+# 生成消息时依赖于 std_msgs
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
+#执行时依赖
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES demo02_talker_listener
+  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+#  DEPENDS system_lib
 )
 
 include_directories(
@@ -41,6 +59,8 @@ target_link_libraries(Leizhuo_UnderWaterHexapodRobotMaoStep ${catkin_LIBRARIES} 
 add_executable(Leizhuo_UnderWaterHexapodRobot_FluctuateStep src/Leizhuo_UnderWaterHexapodRobot_FluctuateStep.cpp)
 target_link_libraries(Leizhuo_UnderWaterHexapodRobot_FluctuateStep ${catkin_LIBRARIES} ${orocos_kdl_LIBRARIES})
 
+add_executable(Leizhuo_UnderWaterHexapodRobot_FluctuateStepHor src/Leizhuo_UnderWaterHexapodRobot_FluctuateStepHor.cpp)
+target_link_libraries(Leizhuo_UnderWaterHexapodRobot_FluctuateStepHor ${catkin_LIBRARIES} ${orocos_kdl_LIBRARIES})
 
 foreach(dir config launch meshes urdf)
 	install(DIRECTORY ${dir}/
