--- a/3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/package.xml
+++ b/3.Sofrware&Firmware/Leizhuo_UnderWaterHexapodRobot/package.xml
@@ -7,14 +7,52 @@
 for Leizhuo_UnderWaterHexapodRobot robot</p>
   </description>
   <author>TODO</author>
-  <maintainer email="TODO@email.com" />
+  <maintainer email="953598974@qq.com" />
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>roslaunch</depend>
-  <depend>robot_state_publisher</depend>
-  <depend>rviz</depend>
-  <depend>joint_state_publisher_gui</depend>
-  <depend>gazebo</depend>
+  <build_depend>controller_manager</build_depend>
+<build_depend>gazebo_ros</build_depend>
+<build_depend>gazebo_ros_control</build_depend>
+<build_depend>joint_state_publisher</build_depend>
+<build_depend>robot_state_publisher</build_depend>
+<build_depend>roscpp</build_depend>
+<build_depend>rospy</build_depend>
+<build_depend>rviz</build_depend>
+<build_depend>xacro</build_depend>
+<build_depend>kdl_parser</build_depend>
+<build_depend>urdf</build_depend>
+<build_depend>serial</build_depend>
+<build_export_depend>serial</build_export_depend>
+<exec_depend>serial</exec_depend>
+<build_export_depend>controller_manager</build_export_depend>
+<build_export_depend>gazebo_ros</build_export_depend>
+<build_export_depend>gazebo_ros_control</build_export_depend>
+<build_export_depend>joint_state_publisher</build_export_depend>
+<build_export_depend>robot_state_publisher</build_export_depend>
+<build_export_depend>roscpp</build_export_depend>
+<build_export_depend>rospy</build_export_depend>
+<build_export_depend>rviz</build_export_depend>
+<build_export_depend>xacro</build_export_depend>
+<build_depend>message_generation</build_depend>
+<exec_depend>message_runtime</exec_depend>
+<exec_depend>controller_manager</exec_depend>
+<exec_depend>gazebo_ros</exec_depend>
+<exec_depend>gazebo_ros_control</exec_depend>
+<exec_depend>joint_state_publisher</exec_depend>
+<exec_depend>robot_state_publisher</exec_depend>
+<exec_depend>roscpp</exec_depend>
+<exec_depend>rospy</exec_depend>
+<exec_depend>rviz</exec_depend>
+<exec_depend>xacro</exec_depend>
+<exec_depend>kdl_parser</exec_depend>
+<exec_depend>urdf</exec_depend>
+<depend>sensor_msgs</depend>
+<depend>std_msgs</depend>
+<depend>orocos_kdl</depend>
+<depend>trac_ik_lib</depend>
+<depend>boost</depend>
+<depend>roslaunch</depend>
+<depend>gazebo</depend>
   <export>
     <architecture_independent />
   </export>
